--- a/src/js/Components/Board/main/view/board-style.css
+++ b/src/js/Components/Board/main/view/board-style.css
@@ -37,10 +37,12 @@
   height: 1rem;
   padding-right: 0.25em;
 }
+.tracking-grid-utility-container,
 .main-grid-utility-container {
   display: flex;
   flex-direction: column;
-  gap: 0.5em;
+  justify-content: center;
+  gap: 0.75em;
 }
 
 .board-buttons-container {
@@ -51,6 +53,7 @@
 .board-buttons-container > div > button {
   flex: 1;
   width: 100%;
+  height: fit-content;
 }
 
 .end-turn-button:disabled,
