--- a/src/styles/page-style.css
+++ b/src/styles/page-style.css
@@ -35,7 +35,6 @@ body {
 
 main {
   padding: 0.5em;
-  height: 100vh;
   flex: 1;
 }
 
@@ -65,3 +64,16 @@ footer a {
   box-shadow: 0px 0px 5px 3px var(--radar-green);
 }
 /* #endregion */
+
+@media (max-width: 1200px) {
+  :root {
+    --grid-cell-width: 2em;
+    --grid-cell-height: 2em;
+  }
+  .board {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
